--- a/codestral.html
+++ b/codestral.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href="body.css">
+</head>
 <body>
 <canvas id="gameCanvas" width="480" height="480"></canvas>
 </body>
