--- a/codestral.html
+++ b/codestral.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="styles.css">
+<link rel="stylesheet" type="text/css" href="body.css">
 </head>
 <body>
 <canvas id="gameCanvas" width="480" height="480"></canvas>
-<script src="game.js"></script>
+<script src="ame.js"></script>
 </body>
 </html>
